2006-12-21 Werner Hoch <werner.ho@gmx.de>

	* src/x_autonumber.c: fixed o_selection_remove call which caused 
	  gschem to crash. suggestion by Ales, patch from Peter Brett.

	* src/x_dialog.c: cosmetics in the color dialog,
	  use GtkDialog for the hotkeys dialog, use a GList to store the
	  hotkeys and a GtkTreeView to show them.

2006-12-20 Werner Hoch <werner.ho@gmx.de>

	* src/x_dialog.c: cosmetics in the slot dialog,
          use GtkDialog for the coords and the about dialog, Code cleanups

2006-12-19 Werner Hoch <werner.ho@gmx.de>

	* src/x_dialog.c: cosmetics in the translate dialog
	  use GtkDialog for the arc angle, the text size and the snap size
	  dialog. Use GtkSpinButtons for the three dialogs.
	
2006-12-18 Werner Hoch <werner.ho@gmx.de>

	* src/x_dialog.c: some more code refactoring in the dialogs
	  edit filltype, edit linetype and edit text. Use the style constants
	  from x_dialog.h
	
	* include/x_dialog.h: added constants for dialog layout style

	* src/x_dialog.c: use GtkDialog for text entry dialog, some code 
	  refactoring. Fixed a bug in select_all_text_in_textview() which
	  toggled the selection instead of selecting it.
	   
	* src/o_picture.c: set transient_for flag for the dialogs
	  add image and modify image.

	* src/x_attribedit.c: set transient_for flag for the dialog

	* src/x_compselect.c: set the widget focus to the filter entry
	  present the window and select the filter text when reselecting
	  the dialog with "i". (ideas from Peter Clifton)

2006-12-17 Stuart Brorson <sdb@cloud9.net>
	* src/x_autonumber.c: Replace GTK-26 ism with 2.4 fcns.  Thanks,
	Werner, for the suggestion!

2006-12-16 Ales Hvezda   <ahvezda@geda.seul.org>

	Merged Carlos' glist work via Peter Brett's patch sets to the trunk

	2006-10-22 Carlos Nieves Onega <cnieves@iespana.es>
	
		* src/o_delete.c: Changed a check to use glib debugging
		functions.  Don't free objects at the end of o_delete,
		but free only the list.
	