@@ -171,9 +171,8 @@ void o_select_object(TOPLEVEL *w_current, OBJECT *o_current,
 
       /* object not select, add it to the selection list */
       o_select_run_hooks(w_current, o_current, 1);
-      w_current->page_current->selection_list = 
-	o_selection_add(w_current->page_current->selection_list,
-			o_current);
+      o_selection_add(&(w_current->page_current->selection_list),
+		      o_current);
 
       break;
 
@@ -207,9 +206,8 @@ void o_select_object(TOPLEVEL *w_current, OBJECT *o_current,
 				       &(w_current->page_current->selection_list));
 	    
 	    o_select_run_hooks(w_current, o_current, 1);
-            w_current->page_current->selection_list = 
-	      o_selection_add(w_current->page_current->selection_list,
-			      o_current);
+	    o_selection_add(&(w_current->page_current->selection_list),
+			    o_current);
           }	
 
           /* condition: doing single object add */
@@ -222,9 +220,8 @@ void o_select_object(TOPLEVEL *w_current, OBJECT *o_current,
 				       &(w_current->page_current->selection_list));
 
             o_select_run_hooks (w_current, o_current, 1);
-            w_current->page_current->selection_list =
-	      o_selection_add(w_current->page_current->selection_list,
-			      o_current);
+	    o_selection_add(&(w_current->page_current->selection_list),
+			    o_current);
           }
 
           if (CONTROLKEY) {
