@@ -582,9 +582,8 @@ void o_text_end(TOPLEVEL *w_current)
   o_select_run_hooks(w_current, NULL, 2); 
   o_selection_unselect_list(w_current,
 			    &(w_current->page_current->selection_list));
-  w_current->page_current->selection_list = 
-    o_selection_add(w_current->page_current->selection_list, 
-		    w_current->page_current->object_tail);
+  o_selection_add(&(w_current->page_current->selection_list), 
+		  w_current->page_current->object_tail);
 	
 
   /* object_tail is the object that was just added */
