@@ -925,10 +925,8 @@ int o_net_consolidate_segments(TOPLEVEL *w_current, OBJECT *object)
           if (reselect_new == TRUE) {
             o_selection_remove(&(w_current->page_current->selection_list), 
                                object);
-
-            w_current->page_current->selection_list = 
-	      o_selection_add(w_current->page_current->selection_list, 
-			      object);
+	    o_selection_add(&(w_current->page_current->selection_list), 
+			    object);
           }
 				
           s_conn_remove(w_current, other_object);
