@@ -1,3 +1,10 @@
+2006-12-21 Peter Brett   <peter@peter-b.co.uk>
+	
+	* include/prototype.h, src/o_net_basic.c, src/o_selection.c:
+	Update interface of o_selection_add() to match
+	o_selection_remove(). Pass the GList by reference so head can be
+	updated.
+	
 2006-12-16 Ales Hvezda   <ahvezda@geda.seul.org>
 
 	Merged Carlos' glist work via Peter Brett's patch sets to the trunk
